@@ -20,12 +20,21 @@
 
 package com.spotify.i18n.locales.common.impl;
 
+import static com.spotify.i18n.locales.common.model.LocaleAffinity.HIGH;
+import static com.spotify.i18n.locales.common.model.LocaleAffinity.LOW;
+import static com.spotify.i18n.locales.common.model.LocaleAffinity.MUTUALLY_INTELLIGIBLE;
+import static com.spotify.i18n.locales.common.model.LocaleAffinity.NONE;
+import static com.spotify.i18n.locales.common.model.LocaleAffinity.SAME;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
+import com.ibm.icu.impl.locale.LocaleDistance;
+import com.ibm.icu.util.LocaleMatcher.FavorSubtag;
+import com.ibm.icu.util.ULocale;
 import com.spotify.i18n.locales.common.LocalesResolver;
+import com.spotify.i18n.locales.common.model.LocaleAffinity;
 import com.spotify.i18n.locales.common.model.ResolvedLocale;
 import com.spotify.i18n.locales.common.model.SupportedLocale;
 import java.util.Collections;
@@ -33,6 +42,7 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -49,6 +59,23 @@ class LocalesResolverBaseImplTest {
 
     assertEquals(
         thrown.getMessage(), "Missing required properties: supportedLocales defaultResolvedLocale");
+  }
+
+
+  @Test
+  void whenBuildingWithRequiredLocaleAffinityNONE_buildFails() {
+    IllegalStateException thrown =
+        assertThrows(IllegalStateException.class, () -> LocalesResolverBaseImpl.builder()
+            .supportedLocales(
+                Set.of("fr", "ar", "zh-Hant", "ja").stream()
+                    .map(SupportedLocale::fromLanguageTag)
+                    .collect(Collectors.toSet()))
+            .defaultResolvedLocale(DEFAULT_LOCALE)
+            .requiredLocaleAffinity(NONE)
+            .build());
+
+    assertEquals(
+        thrown.getMessage(), "Required locale affinity for resolved locale cannot be NONE.");
   }
 
   @Test
@@ -173,7 +200,7 @@ class LocalesResolverBaseImplTest {
   static Stream<Arguments> whenResolvingUnsupportedLocale_returnBetterDefaultLocale() {
     Set<SupportedLocale> supportedLocales =
         // We add 3 different variants of English to the list of supported locales
-        Set.of("en", "en-GB", "en-IN", "hi", "fr", "ar", "zh-Hant", "ja").stream()
+        Set.of("ar", "en", "en-GB", "en-IN", "fr", "hi", "hr", "id", "ja", "nb", "zh-Hant").stream()
             .map(SupportedLocale::fromLanguageTag)
             .collect(Collectors.toSet());
 
@@ -199,7 +226,10 @@ class LocalesResolverBaseImplTest {
             supportedLocales,
             ResolvedLocale.fromLanguageTags("en-IN", List.of("en"), "en-IN")),
         // Tamil (Malaysia)
-        Arguments.of("ta-MY", supportedLocales, ResolvedLocale.fromLanguageTags("en", "en-MY")),
+        Arguments.of(
+            "ta-MY",
+            supportedLocales,
+            ResolvedLocale.fromLanguageTags("en-GB", List.of("en"), "en-MY")),
         // Nama (Namibia)
         Arguments.of(
             "naq-NA",
@@ -209,7 +239,19 @@ class LocalesResolverBaseImplTest {
         Arguments.of(
             "dz-BT",
             supportedLocales,
-            ResolvedLocale.fromLanguageTags("en-GB", List.of("en"), "en-GB")));
+            ResolvedLocale.fromLanguageTags("en-GB", List.of("en"), "en-GB")),
+        // Bosnian (Bosnia)
+        Arguments.of("bs-BA", supportedLocales, ResolvedLocale.fromLanguageTags("hr", "hr-BA")),
+        // Danish (Danemark), should NOT be matched with nb (Norwegian Bokmål)
+        Arguments.of(
+            "da-DK",
+            supportedLocales,
+            ResolvedLocale.fromLanguageTags("en-GB", List.of("en"), "en-DK")),
+        // Malay (Malaysia), should NOT be matched with id (Indonesian)
+        Arguments.of(
+            "ms-MY",
+            supportedLocales,
+            ResolvedLocale.fromLanguageTags("en-GB", List.of("en"), "en-MY")));
   }
 
   private static final Set<SupportedLocale> SUPPORTED_LOCALES =
@@ -304,6 +346,7 @@ class LocalesResolverBaseImplTest {
         LocalesResolverBaseImpl.builder()
             .supportedLocales(SUPPORTED_LOCALES)
             .defaultResolvedLocale(DEFAULT_LOCALE)
+            .requiredLocaleAffinity(MUTUALLY_INTELLIGIBLE)
             .build();
 
     ResolvedLocale expectedResolvedLocale =
@@ -318,13 +361,14 @@ class LocalesResolverBaseImplTest {
     return Stream.of(
         Arguments.of("en-LK", "en-GB", List.of("en"), "en-GB"),
         Arguments.of("es-419", "es-419", List.of("es"), "es-419"),
-        Arguments.of("ga-IE", "en", Collections.emptyList(), "en-IE"),
+        Arguments.of("ga-IE", "en-GB", List.of("en"), "en-IE"),
         Arguments.of("gn-PY", "es-419", List.of("es"), "es-PY"),
-        Arguments.of("kk-KZ", "ru", Collections.emptyList(), "ru-KZ"),
-        Arguments.of("mn-MN", "ru", Collections.emptyList(), "ru-RU"),
-        Arguments.of("nso-ZA", "en", Collections.emptyList(), "en-ZA"),
-        Arguments.of("sq-XK", "en", Collections.emptyList(), "en-US"),
+        Arguments.of("kk-KZ", "en-GB", List.of("en"), "en-GB"),
+        Arguments.of("mn-MN", "en-GB", List.of("en"), "en-GB"),
+        Arguments.of("nso-ZA", "en-GB", List.of("en"), "en-ZA"),
+        Arguments.of("sq-XK", "en-GB", List.of("en"), "en-GB"),
         Arguments.of("sr-Latn-XK", "sr-Latn", Collections.emptyList(), "sr-Latn-XK"),
+        Arguments.of("sr-Cyrl-XK", "sr-Latn", Collections.emptyList(), "sr-Latn-XK"),
         Arguments.of("sr-XK", "sr-Latn", Collections.emptyList(), "sr-Latn-XK"));
   }
 
@@ -348,5 +392,133 @@ class LocalesResolverBaseImplTest {
             List.of("es"),
             "es-419");
     assertThat(resolver.resolve(localeToResolve), is(expectedResolvedLocale));
+  }
+
+  @ParameterizedTest
+  @MethodSource
+  public void givenRequiredLocaleAffinity_whenResolvingLocale_returnsExpected(
+      final LocaleAffinity requiredAffinity, String input, ResolvedLocale resolvedLocale) {
+    final Set<SupportedLocale> supportedLocales =
+        Set.of("es", "es-419", "hr", "nb", "id", "ru", "sr-Latn").stream()
+            .map(SupportedLocale::fromLanguageTag)
+            .collect(Collectors.toSet());
+
+    final LocalesResolver resolver =
+        LocalesResolverBaseImpl.builder()
+            .supportedLocales(supportedLocales)
+            .defaultResolvedLocale(DEFAULT_LOCALE)
+            .requiredLocaleAffinity(requiredAffinity)
+            .build();
+
+    assertEquals(resolvedLocale, resolver.resolve(input));
+  }
+
+  static Stream<Arguments> givenRequiredLocaleAffinity_whenResolvingLocale_returnsExpected() {
+    Set<SupportedLocale> supportedLocales =
+        Set.of("es", "es-419", "hr", "nb", "id", "ru", "sr-Latn").stream()
+            .map(SupportedLocale::fromLanguageTag)
+            .collect(Collectors.toSet());
+
+    return Stream.of(
+        // SAME affinity
+        Arguments.of(SAME, "bs", DEFAULT_LOCALE), // Bosnian should not resolve to Croatian
+        Arguments.of(SAME, "da", DEFAULT_LOCALE), // Danish should not resolve to Norwegian Bokmål
+        Arguments.of(SAME, "ms", DEFAULT_LOCALE), // Malay should not resolve to Indonesian
+        Arguments.of(SAME, "kk", DEFAULT_LOCALE), // Kazakh should not resolve to Russian
+        Arguments.of(SAME, "mn", DEFAULT_LOCALE), // Mongolian should not resolve to Russian
+        Arguments.of(
+            SAME,
+            "es-PY",
+            ResolvedLocale.fromLanguageTags(
+                "es-419", List.of("es"), "es-PY")), // Spanish (Paraguay) should resolve to
+        Arguments.of(
+            SAME,
+            "es-PT",
+            ResolvedLocale.fromLanguageTags("es", "es-ES")), // Spanish (Paraguay) should resolve to
+        Arguments.of(
+            SAME,
+            "sr-Cyrl-RS",
+            ResolvedLocale.fromLanguageTags(
+                "sr-Latn", "sr-Latn")), // Serbian (Cyrillic) should resolve to Serbian (Latin)
+
+        // Mutually Intelligible
+        Arguments.of(MUTUALLY_INTELLIGIBLE, "bs", ResolvedLocale.fromLanguageTags("hr", "hr-BA")),
+        Arguments.of(
+            MUTUALLY_INTELLIGIBLE,
+            "da",
+            DEFAULT_LOCALE), // Danish should not resolve to Norwegian Bokmål
+        Arguments.of(
+            MUTUALLY_INTELLIGIBLE, "ms", DEFAULT_LOCALE), // Malay should not resolve to Indonesian
+        Arguments.of(
+            MUTUALLY_INTELLIGIBLE, "kk", DEFAULT_LOCALE), // Kazakh should not resolve to Russian
+        Arguments.of(
+            MUTUALLY_INTELLIGIBLE, "mn", DEFAULT_LOCALE), // Mongolian should not resolve to Russian
+        Arguments.of(MUTUALLY_INTELLIGIBLE, "eu-ES", DEFAULT_LOCALE),
+        Arguments.of(MUTUALLY_INTELLIGIBLE, "ca-AD", DEFAULT_LOCALE),
+        // Spanish (Paraguay) should resolve to Spanish (Latin America)
+        Arguments.of(
+            MUTUALLY_INTELLIGIBLE,
+            "es-PY",
+            ResolvedLocale.fromLanguageTags("es-419", List.of("es"), "es-PY")),
+        // Spanish (Portugal) should resolve to Spanish
+        Arguments.of(
+            MUTUALLY_INTELLIGIBLE, "es-PT", ResolvedLocale.fromLanguageTags("es", "es-ES")),
+        // Serbian (Cyrillic) should resolve to Serbian (Latin)
+        Arguments.of(
+            MUTUALLY_INTELLIGIBLE,
+            "sr-Cyrl-RS",
+            ResolvedLocale.fromLanguageTags("sr-Latn", "sr-Latn")),
+
+        // HIGH affinity
+        Arguments.of(HIGH, "da", ResolvedLocale.fromLanguageTags("nb", "nb-NO")),
+        Arguments.of(HIGH, "da-DK", ResolvedLocale.fromLanguageTags("nb", "nb-NO")),
+
+        // ⚠️ Logic for Malay differs from LocaleAffinityBiCalculatorBaseImpl, it should resolve to
+        // Indonesian. This should be fixed somehow, but is considered as acceptable for now.
+        Arguments.of(HIGH, "ms", DEFAULT_LOCALE),
+        Arguments.of(HIGH, "ms-MY", DEFAULT_LOCALE),
+        Arguments.of(HIGH, "mn-KZ", DEFAULT_LOCALE),
+        Arguments.of(HIGH, "mn", DEFAULT_LOCALE),
+        Arguments.of(HIGH, "eu-ES", DEFAULT_LOCALE),
+        Arguments.of(HIGH, "ca-AD", DEFAULT_LOCALE),
+
+        // LOW affinity
+        Arguments.of(LOW, "da", ResolvedLocale.fromLanguageTags("nb", "nb-NO")),
+        Arguments.of(LOW, "da-DK", ResolvedLocale.fromLanguageTags("nb", "nb-NO")),
+        Arguments.of(LOW, "ms", ResolvedLocale.fromLanguageTags("id", "id-ID")),
+        Arguments.of(LOW, "ms-MY", ResolvedLocale.fromLanguageTags("id", "id-ID")),
+        Arguments.of(LOW, "mn-KZ", ResolvedLocale.fromLanguageTags("ru", "ru-KZ")),
+        Arguments.of(LOW, "mn", ResolvedLocale.fromLanguageTags("ru", "ru-RU")),
+        Arguments.of(LOW, "eu-ES", ResolvedLocale.fromLanguageTags("es", "es-ES")),
+        Arguments.of(LOW, "ca-AD", ResolvedLocale.fromLanguageTags("es", "es-ES")));
+  }
+
+  @Test
+  @Disabled
+  public void testDistance() {
+    System.out.println(
+        LocaleDistance.INSTANCE.testOnlyDistance(
+            ULocale.forLanguageTag("eu-ES"),
+            ULocale.forLanguageTag("es"),
+            LocaleDistance.INSTANCE.getDefaultScriptDistance(),
+            FavorSubtag.LANGUAGE));
+    System.out.println(
+        LocaleDistance.INSTANCE.testOnlyDistance(
+            ULocale.forLanguageTag("ca-AD"),
+            ULocale.forLanguageTag("es"),
+            LocaleDistance.INSTANCE.getDefaultScriptDistance(),
+            FavorSubtag.LANGUAGE));
+    System.out.println(
+        LocaleDistance.INSTANCE.testOnlyDistance(
+            ULocale.forLanguageTag("da"),
+            ULocale.forLanguageTag("nb"),
+            LocaleDistance.INSTANCE.getDefaultScriptDistance(),
+            FavorSubtag.LANGUAGE));
+    System.out.println(
+        LocaleDistance.INSTANCE.testOnlyDistance(
+            ULocale.forLanguageTag("ms"),
+            ULocale.forLanguageTag("id"),
+            LocaleDistance.INSTANCE.getDefaultScriptDistance(),
+            FavorSubtag.LANGUAGE));
   }
 }
